# Chip-8-Emulator

./: CMakeLists.txt  README.md  main.cpp
include/: buzzer.h  chip8.h  screen.h  utilities.h
src/: buzzer.cpp  chip8.cpp  screen.cpp
